<resources>
    <string name="app_name">Delhi Tour</string>
    <string name="About_Delhi">About Delhi</string>
    <string name="Historical_Places">Historical Places</string>
    <string name="map">Map</string>
    <string name="Gallery">Gallery</string>
    <string name="important_links">Links</string>
    <string name="More_apps">Other Apps</string>
    <string name="Share_App">Share App by Bluetooth</string>
    <string name="About_us">About us</string>
    <string name="Settings">Settings</string>
    <string name="aboutdelhicontent">Delhi, officially the National Capital Territory of Delhi or NCT,
        is a city and a union territory of India. It is bordered by Haryana on three sides and by Uttar Pradesh to the east.
        The NCT covers an area of 1,484 square kilometres (573 sq mi). According to 2011 census, Delhi\'s city population was
        about 11 million, the second highest in India after Mumbai, while the whole NCT population was about 16.8 million.
        Delhi\'s urban area is now considered to extend beyond the NCT boundary to include an estimated population of over 26
        million people making it the world\'s second largest urban area. As of 2016 recent estimates of the metro economy of its
        urban area have ranked Delhi either the top or second most productive metro area of India. Delhi is the second
        wealthiest city after Mumbai in India, with a total wealth of $450 billion and home to 18 billionaires and 23,000
        millionaires.
        Delhi has been continuously inhabited since the 6th century BC. Through most of its history, Delhi has served as a capital of
        various kingdoms and empires. It has been captured, ransacked and rebuilt several times, particularly during the medieval
        period, and modern Delhi is a cluster of a number of cities spread across the metropolitan region. A union territory, the
        political administration of the NCT of Delhi today more closely resembles that of a state of India, with its own legislature,
        high court and an executive council of ministers headed by a Chief Minister. New Delhi is jointly administered by the federal
        government of India and the local government of Delhi, and is the capital of the NCT of Delhi. Delhi hosted the first and ninth
        Asian Games in 1951 and 1982 respectively, 1983 NAM Summit, 2010 Men\'s Hockey World Cup, 2010 Commonwealth Games, 2012 BRICS
        Summit and was one of the major host cities of the 2011 Cricket World Cup.
        Delhi is also the centre of the National Capital Region (NCR), which is a unique
        interstate regional planning area created by the National Capital Region Planning Board Act of 1985.

</string>
    <string name="delhigovernment">Delhi Government</string>
    <string name="delhipolice">Delhi Police</string>
    <string name="delhitourism">Delhi Tourism</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
