<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Important Links"
            android:textAllCaps="true"
            android:textColor="#FF4500"
            android:textSize="35sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delhig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:background="#ADFF2F"
            android:onClick="delhigov"
            android:text="@string/delhigovernment"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delhipolice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ADFF2F"
            android:onClick="delhipolice"
            android:text="@string/delhipolice"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delhitourism"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ADFF2F"
            android:onClick="tourism"
            android:text="@string/delhitourism"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>